--- a/_core/Cargo.toml
+++ b/_core/Cargo.toml
@@ -4,17 +4,11 @@ version = "0.1.0"
 authors = ["thinkier <26728734+thinkier@users.noreply.github.com>"]
 edition = "2018"
 
-[lib]
-proc-macro = true
-
 [dependencies]
-proc-macro2="^1.0.18"
-quote="^1.0.7"
-
-[dependencies.syn]
-version="^1.0.33"
-features=["full"]
+hyper-tls="^0.4.1"
+hyper="^0.13.6"
+serde="^1.0.114"
+serde_json="^1.0.56"
 
 [features]
-# Built in backtracing is feature-gated because it's still unstable on rust's end
-backtrace=[]
+split_msg=[]
